Version ClaSS-0.9.24 release (2010/8/26)
-----------------------------------------

Changed the epf fileurl function to be epf_list_files.

Made use of epf_list_files for the InfoBook's student_reports page.


Version ClaSS-0.9.23 release (2010/8/16)
-----------------------------------------

New installation script for the transport book tables.

Start on adding transport scripts to Admin.

New student_transport link in InfoBook.

Removed configure access to budgets for administrators (use special
admin permissions instead).

Added tiny_mce package under lib. Included an init to onload js
function for textareas with class="htmleditorarea".

Changed the message script to use tiny_mce when emailing.

Improved send_email_to function so it can handle html for pearmail.

Improved js loadRequired function so it better handles class names.

Added Backgrounds and Medical to the student transfer script.

A few tweaks to the orders for usability.


Version ClaSS-0.9.22 release (2010/7/05)
-----------------------------------------

Made enrolment status an option on the group_search page.

New export from InfoBook which takes displayed columns and writes
straight to xls format.

Added latitude and longitude fields to address table (apply the patch!!).

A new cron script which works as an alternative to ldap for generating
epfusernames.

Fixed order_action when enacting a delivery; the cancel does not now
cause a blank invoice.


Version ClaSS-0.9.21 release (2010/6/10)
-----------------------------------------

A small change to the subject sequence for fetchReports.

Added a subject_status field to the report table (apply the patch!).

Change to allow orders to be placed by perms=x even when the balance is zero.

Included some crude postcode analysis to the statistics page in admin.

New day-by-day break down of the attendnace statistics.

Experimenting with new comment writer which does categories and
comments. Only applied to summary comments so far as newcomment_writer.
