@@ -4,13 +4,13 @@
  */
 
 $action='report_assessments.php';
-$action_post_vars=array('year','stage','selfid','selyid','profid','gender','eids','template');
+$action_post_vars=array('year','stage','selfid','selyid','profid','profid','gender','eids','template');
 
 if(isset($_POST['year'])){$year=$_POST['year'];}
 if(isset($_POST['stage'])){$stage=$_POST['stage'];}
 if(isset($_POST['selfid'])){$selfid=$_POST['selfid'];}
 if(isset($_POST['selyid'])){$selyid=$_POST['selyid'];}
-if(isset($_POST['profid'])){$profid=$_POST['profid'];}
+if(isset($_POST['profid']) and $_POST['profid']!=''){$profid=$_POST['profid'];}
 if(isset($_POST['template'])){$template=$_POST['template'];}
 if(isset($_POST['gender'])){$gender=$_POST['gender'];}
 if(isset($_POST['newfid']) and $_POST['newfid']!=$selfid){$selfid=$_POST['newfid'];$selyid='';}
